# simd

./: CMakeLists.txt
src/: main.cpp  test.cpp  test16.cpp  test4.cpp
src/simd/: Float16.hpp  Float4.hpp  Vec16.hpp  Vec4.cpp  Vec4.hpp  Vec8.hpp  simd.hpp
src/simd/sse/: Float4.cpp  Float4.hpp
tests/: test16.cpp  test4.cpp
